--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.2.10
 Django==3.0.8
 djangorestframework==3.11.0
+python-decouple==3.3
+psycopg2==2.8.5
 pytz==2020.1
 sqlparse==0.3.1
-gunicorn==20.0.4
+Pillow==7.2.0
